# game_rating_predictor

./: .gitignore  README.md  fetcher_data.py  pyproject.toml  req.txt
src/: games_api.py  main.py  model_predictor.py  reducing_games.py  req.txt  request_instance.py  retrieving_data.py  retrieving_games.py  training_model.py  utils.py
tests/: reducing_games_test.py
